add functionality to be able to filter entries based on calories

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,5 +1,14 @@
 h1 {
   color: blue;
+  text-align: center;
+}
+
+.entryDisplayArea h2 {
+  text-align: center;
+}
+
+div .btn-success {
+  align-content: center;
 }
 
 .selected {
